--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/colors": "^0.0.1-beta.7",
+    "@vueuse/core": "^8.3.1",
     "element-plus": "^2.1.11",
     "vue": "^3.2.25"
   },
