--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vueuse/core": "^8.3.1",
     "element-plus": "^2.1.11",
+    "lodash-es": "^4.17.21",
     "vue": "^3.2.25"
   },
   "devDependencies": {
